--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/request-ip": "^0.0.41",
     "@types/swagger-ui-express": "^4.1.7",
     "typescript": "^5.5.3"
   },
@@ -27,6 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "nodemon": "^3.1.4",
+    "request-ip": "^3.3.0",
     "swagger-ui-express": "^5.0.1"
   }
 }
